[metadata]
name = aioflux
version = 0.1.1
description = High-performance async rate limiting and queue management
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Asmin963/aioflux
author = zlexdev
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.8
install_requires =
    redis>=5.3.1
    aiohttp>=3.8.0

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-asyncio>=0.20.0
    pytest-cov>=4.0.0
    black>=22.0.0
    flake8>=6.0.0

[flake8]
max-line-length = 127
extend-ignore = E203, W503
exclude = .git,__pycache__,build,dist
